# anakiORM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pubspec.yaml
docs/: api.md  architecture.md  build.md  docker-aot.md  drivers.md  spec.md
example/shelf_mssql_example/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  pubspec.yaml
example/shelf_mssql_example/lib/dto/: todo_dto.dart
example/shelf_mssql_example/lib/routes/: todo_routes.dart
example/shelf_mysql_example/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pubspec.yaml
example/shelf_postgres_example/: docker-compose.yml  pubspec.yaml
example/shelf_postgres_example/lib/routes/: todo_routes.dart
example/shelf_sqlite_example/: README.md  pubspec.yaml  todos.db
example/shelf_sqlite_example/lib/dto/: todo_dto.dart
example/vaden_anaki_example/: README.md  application.yaml  pubspec.yaml
example/vaden_anaki_example/lib/config/anaki/: anaki_configuration.dart  database_runner.dart
example/vaden_anaki_example/lib/config/openapi/: openapi_configuration.dart
example/vaden_anaki_example/lib/src/: user_controller.dart
example/vaden_anaki_example/lib/src/dto/: user_dto.dart
example/vaden_anaki_example/migrations/: 001_create_users.sql
example/vaden_anaki_example/public/: index.html
example/vaden_anaki_example/seeds/: 001_seed_users.sql
rust/: Cargo.toml
rust/src/: connector.rs  error.rs  lib.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs  types.rs
scripts/: build_native.sh  build_release.sh  publish.sh
(+1 files in other folders)
