[package]
name = "anaki_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
mssql = ["dep:tiberius", "dep:tokio-util"]
oracle = ["dep:sibyl"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# sqlx — shared across sqlite, postgres, mysql
sqlx = { version = "0.8", features = ["runtime-tokio"], optional = false }

# mssql (SQL Server)
tiberius = { version = "0.12", default-features = false, features = ["rustls"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

# oracle
sibyl = { version = "0.6", optional = true }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
